[tool.poetry]
name = "robot-parallel-tests"
version = "0.1.0"
description = ""
authors = ["Himanshu Jagdish Sheth <himanshu.sheth@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
selenium = "^3.141.0"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
robotframework = "^4.1.3"
robotframework-seleniumlibrary = "^5.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"